CLI app use new API